Prevent overflow into different items
svn path=/branches/art-hub/; revision=563

--- a/css/art.css
+++ b/css/art.css
@@ -3,8 +3,10 @@ div.list-item {
   margin: 1em;
   float: left;
   width: 20%;
-  height: 12em;
+  height: 13em;
   text-align: center;
+  overflow: auto;
+  white-space: nowrap;
 }
 
 .list-item img {
